--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.2.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
