--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src"
+    "baseUrl": "src"
   },
-  "include": ["src/**/*"]
+  "include": ["src"],
+  "exclude": ["node_modules/", "build"],
+  "typeAcquisition": {
+    "exclude": ["node_modules/"]
+  }
 }
