--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,8 +3,8 @@
     "baseUrl": "src"
   },
   "include": ["src"],
-  "exclude": ["node_modules/", "build"],
+  "exclude": ["node_modules", "build"],
   "typeAcquisition": {
-    "exclude": ["node_modules/"]
+    "exclude": ["node_modules"]
   }
 }
