--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.27.0",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
