--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "react-to-do",
-  "version": "1.1.0",
+  "name": "tasklist",
+  "version": "2.0.0",
+  "description": "A lightweight, intuitive To Do List web app, built with React and Material UI.",
+  "author": "Jon Rutter",
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.11.0",
