Update package name (resolve branch conflicts)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tasklist",
+  "name": "react-to-do",
   "version": "2.0.0",
   "description": "A lightweight, intuitive To Do List web app, built with React and Material UI.",
   "author": "Jon Rutter",
