--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.11.0",
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.1.0",
     "@mui/lab": "^5.0.0-alpha.58",
-    "@mui/material": "^5.1.0",
+    "@mui/material": "^5.6.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.0",
     "date-fns": "^2.27.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.0",
@@ -23,6 +27,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
+    "typescript": "^4.6.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
