--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.11",
     "react-test-renderer": "^17.0.2"
