--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "@types/react-dom": "^17.0.0",
     "date-fns": "^2.27.0",
     "lodash": "^4.17.21",
+    "nanoid": "^3.3.2",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
+    "react-hook-form": "^7.29.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "typescript": "^4.6.3",
-    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -56,7 +57,6 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.11",
     "react-test-renderer": "^17.0.2"
