--- a/package.json
+++ b/package.json
@@ -3,31 +3,29 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.11.0",
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/roboto": "^4.5.1",
-    "@mui/icons-material": "^5.1.0",
-    "@mui/lab": "^5.0.0-alpha.58",
-    "@mui/material": "^5.1.0",
-    "@testing-library/jest-dom": "^5.15.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.83",
+    "@mui/material": "^5.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "date-fns": "^2.27.0",
+    "@testing-library/user-event": "^14.2.0",
+    "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
-    "prop-types": "^15.8.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.2.1",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^5.0.0",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "^5.0.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,8 +47,6 @@
     ]
   },
   "devDependencies": {
-    "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.1.11",
     "react-test-renderer": "^17.0.2"
   }
 }
