--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
+    "typescript": "^4.7.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
