--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.7",
     "@mui/icons-material": "^5.8.0",
-    "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.8.1",
+    "@mui/system": "^5.8.2",
+    "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^14.2.0",
