--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --verbose",
     "eject": "react-scripts eject",
     "typecheck": "tsc --noEmit"
   },
@@ -57,6 +58,7 @@
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
     "@types/uuid": "^8.3.4",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^28.0.3"
   }
 }
